# sv.net

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TestApp.sln  sv.props
TestApp/: TestApp.vcxproj  TestApp.vcxproj.filters  base.hpp  main.cpp  node.hpp  onefile.cpp  packet.hpp  protocol.hpp  util.h
src/: CMakeLists.txt
src/sv/: net.cpp  net.hpp
src/sv/net/: core.cpp  core.hpp  define.hpp
test/: CMakeLists.txt  test.cpp
